alignment corrections

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1314,6 +1314,7 @@ font-size: 1.75rem !important;
   .tab-paragraph-width {
     width: 100%;
     text-align: justify;
+    
    
   }
   .tab-para-text{
@@ -1326,6 +1327,8 @@ font-size: 1.75rem !important;
   }
   .tab-paragraph{
     font-size: 0.9rem !important;
+    text-align: start !important;
+    margin-left: 10px;
   }
 }
 
